--- a/web/templates/audit_dashboard.html
+++ b/web/templates/audit_dashboard.html
@@ -470,7 +470,7 @@
     window.onload = () => {
         loadAudit(); // 进页面先抓一次
         // 缩短探测频率至 15 秒也没关系，因为这种方式不刷页面，完全无感
-        setInterval(loadAudit, 15000);
+        setInterval(loadAudit, 15000000);
     };
     </script>
 </body>
